Cover video option added

--- a/sections/video_pbj.liquid
+++ b/sections/video_pbj.liquid
@@ -200,6 +200,11 @@
       "label": "t:sections.video_pbj.settings.cover_image.label"
     },
     {
+      "type": "video",
+      "id": "cover_video",
+      "label": "t:sections.video_pbj.settings.cover_video.label"
+    },
+    {
       "type": "text",
       "id": "description",
       "label": "t:sections.video_pbj.settings.description.label",
