--- a/assets/component-deferred-media.css
+++ b/assets/component-deferred-media.css
@@ -88,6 +88,16 @@
   transform: translate(-50%, -50%) scale(1.1);
 }
 
+.deferred-media__poster-button:before {
+  display: block;
+  content: attr(data-label);
+  font-size: 1.6em;
+  font-weight: bold;
+  color: white;
+  position: absolute;
+  top: -3rem;
+}
+
 .deferred-media__poster-button .icon {
   width: 2rem;
   height: 2rem;
