Image with text section - add option for an original image aspect ratio

--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -17,6 +17,11 @@
   overflow: visible;
 }
 
+.image-with-text__media--original.media > img {
+  object-fit: contain;
+  object-position: top center;
+}
+
 .image-with-text__media--small {
   height: 19.4rem;
 }
