Image with text section - add margin-top to consecutive similar sections

--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -441,3 +441,7 @@
     columns: 2;
   }
 }
+
+.section--image-with-text + .section--image-with-text .image-with-text__media-item {
+  margin-top: 15px;
+}
