--- a/snippets/product-media-gallery.liquid
+++ b/snippets/product-media-gallery.liquid
@@ -86,7 +86,7 @@
               {% assign variant_group = grouping.variants.value %}
               {% for file in file_group %}
                 {% if featured_media == file %}
-                  {% assign variant_grouping_name = grouping.name.value %}
+                  {% assign variant_grouping_name = grouping.name.value | strip %}
                   {% break %}
                 {% endif %}
               {% endfor %}
@@ -101,7 +101,7 @@
             {% elsif section.settings.group_variants_source == "alttext" %}
               {%- assign extracted_parts = featured_media.alt | split: section.settings.variant_grouping_delimiter -%}
             {% endif %}
-            {%- assign variant_grouping_name = extracted_parts[variant_grouping_position] -%}
+            {%- assign variant_grouping_name = extracted_parts[variant_grouping_position] | strip -%}
             {%- assign selected_or_first_available_variant_grouping_name = variant_grouping_name -%}
           {% endif %}
         {% endif %}
@@ -151,7 +151,7 @@
                 {% assign variant_group = grouping.variants.value %}
                 {% for file in file_group %}
                   {% if media == file %}
-                    {% assign variant_grouping_name = grouping.name.value %}
+                    {% assign variant_grouping_name = grouping.name.value | strip %}
                     {% for variant_in_group in variant_group %}
                       {% if variant_in_group.id == product.selected_or_first_available_variant.id %}
                         {% assign hide_image = false %}
@@ -175,7 +175,7 @@
                 {%- assign extracted_parts = media.alt | split: section.settings.variant_grouping_delimiter -%}
               {% endif %}
               {%- assign hide_image = true -%}
-              {%- assign variant_grouping_name = extracted_parts[variant_grouping_position] -%}
+              {%- assign variant_grouping_name = extracted_parts[variant_grouping_position] | strip -%}
               {% if selected_or_first_available_variant_grouping_name == variant_grouping_name %}
                 {%- assign hide_image = false -%}
               {%- endif -%}
@@ -320,7 +320,7 @@
                 {% assign variant_group = grouping.variants.value %}
                 {% for file in file_group %}
                   {% if featured_media == file %}
-                    {% assign variant_grouping_name = grouping.name.value %}
+                    {% assign variant_grouping_name = grouping.name.value | strip %}
                     {% break %}
                   {% endif %}
                 {% endfor %}
@@ -335,7 +335,7 @@
               {% elsif section.settings.group_variants_source == "alttext" %}
                 {%- assign extracted_parts = featured_media.alt | split: section.settings.variant_grouping_delimiter -%}
               {% endif %}
-              {%- assign variant_grouping_name = extracted_parts[variant_grouping_position] -%}
+              {%- assign variant_grouping_name = extracted_parts[variant_grouping_position] | strip -%}
               {%- assign selected_or_first_available_variant_grouping_name = variant_grouping_name -%}
             {% endif %}
           {% endif %}
@@ -397,7 +397,7 @@
                   {% assign variant_group = grouping.variants.value %}
                   {% for file in file_group %}
                     {% if media == file %}
-                      {% assign variant_grouping_name = grouping.name.value %}
+                      {% assign variant_grouping_name = grouping.name.value | strip %}
                       {% for variant_in_group in variant_group %}
                         {% if variant_in_group.id == product.selected_or_first_available_variant.id %}
                           {% assign hide_image = false %}
@@ -421,7 +421,7 @@
                   {%- assign extracted_parts = media.alt | split: section.settings.variant_grouping_delimiter -%}
                 {% endif %}
                 {%- assign hide_image = true -%}
-                {%- assign variant_grouping_name = extracted_parts[variant_grouping_position] -%}
+                {%- assign variant_grouping_name = extracted_parts[variant_grouping_position] | strip -%}
                 {% if selected_or_first_available_variant_grouping_name == variant_grouping_name %}
                   {%- assign hide_image = false -%}
                 {%- endif -%}
