Product gallery images filtered by selected variant: fix

--- a/snippets/product-media-modal.liquid
+++ b/snippets/product-media-modal.liquid
@@ -11,7 +11,7 @@
 
 {% assign variant_grouping_position = section.settings.variant_grouping_position | minus: 1 %}
 {% assign variant_image_groupings = product.metafields.custom.variant_images_grouping_list.value %}
-{% assign featured_media = product.selected_or_first_available_variant.featured_media %}
+{% assign featured_media = product.selected_or_first_available_variant.featured_media | default: product.featured_media %}
 {% assign hide_image = false %}
 
 <product-modal id="ProductModal-{{ section.id }}" class="product-media-modal media-modal">
