--- a/sections/video_pbj.liquid
+++ b/sections/video_pbj.liquid
@@ -39,7 +39,9 @@
   {%- endif %}
 {%- endcapture -%}
 
-<div class="color-{{ section.settings.color_scheme }} gradient">
+{% capture pdp_visibility_atts %}{% render 'pdp-visibility-atts' %}{% endcapture %}
+
+<div class="color-{{ section.settings.color_scheme }} gradient" {{ pdp_visibility_atts | strip }}>
   <div class="video-section isolate{% unless section.settings.full_width %} page-width{% endunless %} section-{{ section.id }}-padding">
     <div
       {% if section.settings.full_width %}
@@ -257,6 +259,26 @@
       "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
       "default": 36
+    },
+    {
+      "type": "header",
+      "content": "t:sections.all.visibility.header"
+    },
+    {
+      "type": "paragraph",
+      "content": "t:sections.all.visibility.content"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_for_natural_color",
+      "default": true,
+      "label": "t:sections.all.visibility.natural_color"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_for_dyed_items",
+      "default": true,
+      "label": "t:sections.all.visibility.dyed_items"
     }
   ],
   "presets": [
