Video poster autoplay after product variant change

--- a/sections/video_pbj.liquid
+++ b/sections/video_pbj.liquid
@@ -72,7 +72,7 @@
         {%- if poster_video != null -%}
           {{
           poster_video
-          | video_tag: autoplay: true, loop: true, muted: true, controls: false
+          | video_tag: autoplay: true, loop: true, muted: true, controls: false, class: 'poster_video'
           }}
         {%- elsif poster != null -%}
           {{
